# GitSensei

./: .gitignore  README.md  app.py  complete_day5_demo.py  day4_linkedin_post.md  day4_x_post.md  day5_demo.py  day5_diagnostic.py  integration_test.py  logs.py  main.py  pyproject.toml  repo_data_download.ipynb  requirements.txt  search_agent.py  test_day5_evaluation.py
.ipynb_checkpoints/: repo_data_download-checkpoint.ipynb
logs/: demo_agent_v1_20250928_151755_demo999.json  demo_agent_v1_20250928_151758_demo999.json  faq_agent_v3_20250928_152705_demo.json  sync_test_agent_20250928_152556_sync123.json  test_agent_20250928_151653_test123.json
tests/: __init__.py  run_tests.py  test_agent_logic.py  test_evaluation.py  test_logging_utils.py
