[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
