[project]
name = "gitsensei"
version = "0.1.0"
description = "GitSensei: Your AI GitHub Assistant - A fully functional AI-powered assistant for GitHub workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minsearch>=0.0.5",
    "google-generativeai>=0.8.5",
    "pydantic-ai==1.0.9",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "streamlit>=1.28.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
